lesson06-Zavorotnyi-Oleksandr/app/deploy.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: courseapp-deployment
spec:
  replicas: 10
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 2
      maxSurge: 2
  selector:
    matchLabels:
      app: courseapp
  template:
    metadata:
      labels:
        app: courseapp
    spec:
      containers:
        - name: courseapp
          image: ashomni/course-app:v1.1
          ports:
            - containerPort: 8000
