lesson06-Zavorotnyi-Oleksandr/app/nodeport-svc.yml
apiVersion: v1
kind: Service
metadata:
  name: courseapp-nodeport
spec:
  type: ClusterIP
  selector:
    app: courseapp
  ports:
    - name: http
      port: 8000           # service port
      targetPort: 8000     # pod port
