lesson06-Zavorotnyi-Oleksandr/app/redis-service.yml
apiVersion: v1
kind: Service
metadata:
  name: redis
spec: 
  selector:
    app:  redis

  ports:
    - port: 6379
      targetPort: 6379

  clusterIP: None
