lesson06-Zavorotnyi-Oleksandr/app/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: courseapp-ingress
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
    traefik.ingress.kubernetes.io/router.tls: "true"
spec:
  ingressClassName: traefik
  tls:
    - hosts:
        - course-app.local
      secretName: courseapp-tls
  rules:
    - host: course-app.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: courseapp-nodeport
                port:
                  number: 8000
